task-75-1-gb-adapt-api (#247)
* adapt api to use grocerydata

*change longditude to longitude in market search
*change product to article in /markets/:marketid/offers

* restore transformed folder
